--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "country-state-city": "^3.2.1",
     "express-fileupload": "^1.4.3",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.539.0",
     "overlay-navbar": "^1.2.3",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
