--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@heroicons/react": "^2.2.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@react-oauth/google": "^0.12.2",
     "@stripe/react-stripe-js": "^2.6.2",
     "@stripe/stripe-js": "^3.0.10",
     "@testing-library/jest-dom": "^5.17.0",
