--- a/package.json
+++ b/package.json
@@ -15,19 +15,18 @@
     "cloudinary": "^2.0.3",
     "country-state-city": "^3.2.1",
     "express-fileupload": "^1.4.3",
+    "framer-motion": "^12.23.12",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.539.0",
     "overlay-navbar": "^1.2.3",
     "react": "^18.2.0",
-    "react-alert": "^7.0.3",
-    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.0.1",
-    "react-material-ui-carousel": "^3.4.2",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.2",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
